prep data process

--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/chrispappas007/confedmont/issues"
   },
-  "homepage": "https://github.com/chrispappas007/confedmont#readme"
+  "homepage": "https://github.com/chrispappas007/confedmont#readme",
+  "dependencies": {
+    "async": "^2.5.0",
+    "chalk": "^2.3.0",
+    "mapshaper": "^0.4.56"
+  }
 }
