--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chrispappas007/confedmont#readme",
   "dependencies": {
+    "@turf/turf": "^4.7.3",
     "async": "^2.5.0",
     "chalk": "^2.3.0",
     "mapshaper": "^0.4.56"
